# ensembl-refget

./:  .gitlab-ci.yml  .gitignore  .gitlab-ci.yml  Dockerfile  NOTICE  README.md  requirements.txt
api/: README.md  pyproject.toml  requirements.txt  start.sh
api/config/: unit-config.json
api/src/: .env.example
api/src/refget/: __init__.py  logconfig.yaml  main.py  models.py
api/src/stubs/: indexed_zstd.pyi  tkrzw.pyi
api/testdata/a73351f7-93e7-11ec-a39d-005056b38ce3/: cdna.hashes  chrom.hashes  pep.hashes
api/testdata/a73351f7-93e7-11ec-a39d-005056b38ce3/seqs/: cdna.txt.zst  cds.txt.zst  seq.txt.zst
api/tests/: test_main.py
app/: requirements.txt
app/testdata/: indexdb.tkh
app/testdata/a73351f7-93e7-11ec-a39d-005056b38ce3/: cds.hashes
app/testdata/a73351f7-93e7-11ec-a39d-005056b38ce3/seqs/: pep.txt.zst
app/webapp/: main.py  models.py  test.py
docker/: Dockerfile.uvicorn
indexer/: create_indexdb.py
nginx-unit/: service.conf
nginx-unit/refget/: main.py
pipeline/: README.md  cpanfile  requirements.txt  setup-env.sh
pipeline/indexer/: create_indexdb.py
pipeline/lib/: CoreDBData.pm  Genome.pm  Options.pm
pipeline/nextflow/: datafile.nf  refget.nf
pipeline/nextflow/config/: base.config  datafile.config  prod.config  refget.config
