# See the NOTICE file distributed with this work for additional information
# regarding copyright ownership.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# pyproject.toml -- Ensembl RefGet project configuration

## Generic configuration

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ensembl_refget"
version = "1.0.1"
description = "A refget server"
readme = "README.md"
requires-python = ">= 3.10"
authors = [
    {name = "Ensembl", email = "dev@ensembl.org"},
]
license = {text = "Apache License 2.0"}

# Also will need tkrzw-python which in turn will need the C++ library with a
# matching version.
# This is not currently found on pypi and needs to be installed separately
# https://github.com/estraier/tkrzw, >= 1.0.27
# https://github.com/estraier/tkrzw-python, >= 0.1.30
dependencies = [
  "fastapi[standard] >= 0.115.3",
  "cachetools >= 5.3.3",
  "indexed_zstd >= 1.6.1"
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"
log_cli = "true"

[tool.mypy]
mypy_path = "src/stubs"
plugins = "pydantic.mypy"
